Bug 103556 - Crash when try to open TextBox's Position and Size dialog
Summary: Crash when try to open TextBox's Position and Size dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All Linux (All)
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0
Keywords: bibisectRequest, haveBacktrace, needUITest, regression
Depends on:
Blocks:
 
Reported: 2016-10-28 13:20 UTC by Tamás Zolnai
Modified: 2018-02-01 17:48 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace (12.33 KB, text/plain)
2016-10-28 13:22 UTC, Tamás Zolnai
Details
bt with symbols (7.54 KB, text/plain)
2016-10-29 08:48 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2016-10-28 13:20:35 UTC
Description:
LO Writer crashes when I try to open TextBox's Position and Size dialog.


Steps to Reproduce:
1.Open Writer
2.Place a Text Box, add some content to it
3.Deselect and select it again
4.Context menu -> Position and Size...

Actual Results:  
Writer crashes.

Expected Results:
Position and Size dialog should be opened.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/54.0.2840.71 Safari/537.36
Comment 1 Tamás Zolnai 2016-10-28 13:22:10 UTC
Created attachment 128323 [details]
Backtrace
Comment 2 Xisco Faulí 2016-10-28 13:47:57 UTC
I can't reproduce it in

Version: 5.3.0.0.alpha1
Build ID: f4ca1573fcf445164c068c1046ab5d084e1b005f
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

or

Version: 5.3.0.0.alpha0+
Build ID: 8974b0fafb18f9dd3f2c0e175a3255b80e4c249e
CPU Threads: 4; OS Version: Linux 4.2; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 3 MM 2016-10-28 15:23:37 UTC
Confirmed with master~2016-10-27_11.16.05_LibreOfficeDev_5.3.0.0.alpha1_Linux_x86-64_deb.tar.gz under ubuntu 16.04 x64.

Unconfirmed with Version: 5.2.3.2
Build ID: c019706a50de7fcb07d0d528b09b46a887562beb
CPU Threads: 2; OS Version: Linux 4.4; UI Render: default; 
Locale: en-US (en_US.UTF-8); Calc: single
Comment 4 Xisco Faulí 2016-10-28 23:38:23 UTC
Could it be related to bug 103558 ?
Comment 5 Julien Nabet 2016-10-29 08:48:46 UTC
Created attachment 128340 [details]
bt with symbols

On pc Debian x86-64 with master sources updated yesterday (b927c1f4b334f80d2c2965e5b7327d6b6a685105, I could reproduce this.
Comment 6 Julien Nabet 2016-10-29 08:56:45 UTC
(gdb) p rReq
$1 = (SfxRequest &) @0x7fffffff2600: {<SfxHint> = {_vptr.SfxHint = 0x2aaab05b8610 <vtable for SfxRequest+16>, mnId = 0}, nSlot = 10087, pArgs = 0x0, 
  pImpl = std::unique_ptr<SfxRequest_Impl> containing 0x702ca00}

Caolán: following https://cgit.freedesktop.org/libreoffice/core/commit/?id=117fc49c979d65e5479635eab3ce10d74d076679, thought you might have some idea.
Comment 7 Commit Notification 2016-11-01 13:32:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9e33ac4035442b48bcd2a58f42a279fe9855b6ce

Resolves: tdf#103556 the implicit convert to bare pointer hurts us here

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.