Resolves: tdf#103556 the implicit convert to bare pointer hurts us here

Change-Id: I2d91cf9b11027f76dbcbb5432f4cad71c56f53f2